[project]
name = "debt-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Kleberson-Figueiredo",email = "kleberson.figueiredo.kf@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = {extras = ["all"], version = "^0.121.2"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
tzdata = "^2024.2"
psycopg = {extras = ["binary"], version = "^3.2.4"}
python-dateutil = "^2.9.0.post0"
firebase-admin = "^7.1.0"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.4"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
testcontainers = "^4.9.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format'
run = 'uvicorn debt_control.app:app --host 0.0.0.0 --port 8000 --reload'
#run = 'fastapi dev debt_control/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=debt_control -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
